#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip 
# and try again
#

TAG: pwi-6-0-22-82
TAG: pwi-6-0-22-81
DATE: 10/19/2023
STAFF: lec
wts2-1301/fl2-579/P-WI GXD Assay Module Results Table header - add age
wts2-1303/fl2-578/genotype null search treated as selected record
wts2-1307/fl2-582/duplicate notes in allele/strain pwi
wts2-1300/fl2-585/P-WI GXD Index Summary - add synonyms

TAG: pwi-6-0-22-80
DATE: 10/12/2023
STAFF: lec
wts2-1297/fl2-572/P-WI - Better control of Add button in LitTriage Module

TAG: pwi-6-0-22-79
TAG: pwi-6-0-22-78
TAG: pwi-6-0-22-77
DATE: 10/12/2023
STAFF: lec
wts2-1304/fl2-577/Can't add references or markers

TAG: pwi-6-0-22-76
DATE: 10/05/2023
STAFF: lec
wts2-1293/fl2-570/Add new terms to MCV/TDC
wts2-1297/fl2-572/P-WI - Better control of Add button in LitTriage Module

for modules that conatin warning "Cannot Add if a record is already selected.":
add disable logic to html as well
allele/AlleleController.js
allelederivation/AlleleDerivationController.js
antibody/AntibodyController.js
antigen/AntigenController.js
assay/AssayController.js
clonelib/CloneLibController.js
genotype/GenotypeController.js
mapping/MappingController.js
marker/MarkerController.js
mutantcellline/MutantCellLineController.js
nonmutantcellline/NonMutantCellLineController.js
organism/OrganismController.js
probe/ProbeController.js
strain/StrainController.js
triage/LitTriageController.js

TAG: pwi-6-0-22-75
DATE: 09/25/2023
STAFF: lec
wts2-393/Disease to reference annotation
Lit Triage/Disease Associations

TAG: pwi-6-0-22-74
DATE: 09/08/2023
STAFF: lec
wts2-415/fl2-521/No Phenoypic Analysis migration (TR12775)/remove term from backend products

TAG: pwi-6-0-22-73
TAG: pwi-6-0-22-72
DATE: 08/24/2023
STAFF: lec
wts2-1251/fl2-478/Genotype Module - Result Search Summary

TAG: pwi-6-0-22-71
DATE: 08/24/2023
STAFF: jer
wts2-1247/fl2-473 Move PRISM into PWI

TAG: pwi-6-0-22-70
TAG: pwi-6-0-22-69
TAG: pwi-6-0-22-68
TAG: pwi-6-0-22-67
TAG: pwi-6-0-22-66