@@ -17,6 +17,10 @@
                 ng-model="vm.termSearch"
         />
         <br/>
+        <input id="definitionSearch" name="definitionSearch" class="mousetrap" placeholder='Definition Search' 
+                ng-model="vm.definitionSearch"
+        />
+        <br/>
 
         </form>
       </div>
