@@ -3,6 +3,11 @@
 # and try again
 #
 
+TAG: mgi_java_api-6-0-22-83
+DATE: 10/18/2023
+STAFF: jer
+wts2-1299/fl2-586/P-WI Cell Type Browser - definition search function
+
 TAG: pwi-6-0-22-82
 TAG: pwi-6-0-22-81
 DATE: 10/19/2023
